fix(theme): Scrollbar: parfois, lorsque le mode sombre est activé, la barre est confondue avec la couleur de fond
FIX: MANTIS 7979

--- a/skins/mel_elastic/themes/halloween/style/less/only-root.less
+++ b/skins/mel_elastic/themes/halloween/style/less/only-root.less
@@ -420,6 +420,9 @@
           --calendar-list-item-switch-background-color: var(--button-color-base);
           --main-content-bg-color: var(--base-1);
           --main-border-color: white;
+
+          --scrollbar-handler-color: var(--button-color-base);
+          --scrollbar-background-color: lighten(@base-color-2, 50%);
       }
 
    .barup {
@@ -615,6 +618,7 @@ html.theme-super-classique-main.picture-theme.abstract-picture-theme-two-colored
      --body-picture: url("../images/halloween-bg-dark-unsplash.jpg");
      --compose-body-picture: url("../images/mail-halloween-dark.jpg");
      --layout-sidebar-background-color: var(--base-theme-color-1-nuances-1);
+     --scrollbar-background-color: var(--base-2-n-1);
    }
 
    .task-mail.action-compose {
