--- a/skins/mel_elastic/themes/main/style/less/dark-colors.less
+++ b/skins/mel_elastic/themes/main/style/less/dark-colors.less
@@ -309,6 +309,6 @@ html.dark-mode-custom:root {
   --message-list-content-border-color: #D1D3DD;
 
   //Scrollbar 
-  --scrollbar-handler-color: #181c28;
-  --scrollbar-background-color: var(--tierciary-bckg-color);
+  --scrollbar-handler-color: var(--default-text-color);
+  --scrollbar-background-color: var(--hover-background-color);
 }
