--- a/skins/mel_elastic/themes/super-classic/style/less/dark-colors.less
+++ b/skins/mel_elastic/themes/super-classic/style/less/dark-colors.less
@@ -332,6 +332,6 @@ html.theme-super-classique-main.dark-mode-custom:root {
   --message-list-content-border-color: #D1D3DD;
 
   //Scrollbar 
-  --scrollbar-handler-color: #1a222b;
-  --scrollbar-background-color: #1f2933;
+  --scrollbar-handler-color: var(--main-text-color);
+  --scrollbar-background-color: var(--secondary-text-color);
 }
